--- a/frankencharger/platformio.ini
+++ b/frankencharger/platformio.ini
@@ -11,6 +11,8 @@
 platform=espressif8266
 board=d1_mini
 framework=arduino
+upload_port = frankencharger.local
+
 
 [platformio]
 src_dir=frankencharger
